tests/instantiating/irq_invalid_out_trigger/stderr.golden
error: out-trigger property must be "Edge" or "Level", current value "abc"
bus.fbd +3:19
   |
 3 |     out-trigger = "abc"
   |                   ^^^^^
